# flipperzero-waveshare-nfc

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  tag.rs
